Kubernetes/KubernetesDocs/Projects/sublimetext/sublimetext-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sublimetext
  name: sublimetext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublimetext
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: sublimetext
    spec:
      containers:
        - image: kasmweb/sublime-text:1.18.0-rolling-daily
          name: sublime-text
          ports:
            - containerPort: 6901
