Kubernetes/KubernetesDocs/Projects/sublimetext/sublime-text-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sublimetext-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: sublimetextiap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sublimetext
                port:
                  number: 80
